# fisseq-data-pipeline

./: .gitignore  404.html  AGENTS.md  LICENSE.txt  README.md  example.config  index.html  main.nf  mkdocs.yml  nextflow.config  objects.inv  pyproject.toml  search.html
.github/workflows/: docs.yml
.nextflow/: history
.nextflow/cache/ae726bf0-9afe-4a62-a51b-a3f80df4e9c8/: index.chaotic_mccarthy
aggregate/: index.html
api/aggregate/: index.html
api/anova/: index.html
api/batchcorrect/: index.html
api/batchvsbatch/: index.html
api/config/: index.html
api/features/: index.html
api/input/: index.html
api/normalize/: index.html
api/ovwt/: index.html
api/ovwtcellscores/: index.html
api/permanova/: index.html
api/qcfilter/: index.html
api/utils/: index.html
architecture/: index.html
cli/aggregate/: index.html
cli/anova/: index.html
cli/batchcorrect/: index.html
cli/batchvsbatch/: index.html
cli/features/: index.html
cli/input/: index.html
cli/normalize/: index.html
cli/ovwt/: index.html
cli/ovwtcellscores/: index.html
cli/permanova/: index.html
cli/qcfilter/: index.html
config/: index.html
configuration/: index.html
docs/: aggregate.md  architecture.md  config.md  configuration.md  features.md  filter.md  harmonize.md  index.md  installation.md  nextflow.md  normalize.md  pipeline.md  utils.md  walkthrough.md
docs/api/: aggregate.md  anova.md  batchcorrect.md  batchvsbatch.md  config.md  features.md  input.md  normalize.md  ovwt.md  ovwtcellscores.md  permanova.md  qcfilter.md  utils.md
docs/cli/: aggregate.md  anova.md  batchcorrect.md  batchvsbatch.md  features.md  input.md  normalize.md  ovwt.md  ovwtcellscores.md  permanova.md  qcfilter.md
docs/utils/: config.md  utils.md
filter/: index.html
harmonize/: index.html
installation/: index.html
modules/local/: aggregate_feature_type.nf  aggregate_half.nf  anova.nf  batch_correct_fit.nf  batch_correct_transform.nf  batchvsbatch.nf  batchvsbatch_post.nf  batchvsbatch_pre.nf  blocklist.nf  combine_blocklists.nf  correlate_features.nf  feature_select_batchwise.nf  feature_select_global.nf  finalize_feature_select.nf  generate_split.nf  input.nf  normalize.nf  ovwt_batchwise.nf  ovwt_cellscores_batchwise.nf  ovwt_global.nf  permanova.nf  permanova_batch_corrected.nf  permanova_syn.nf  permanova_wt.nf  qc_filter.nf
nextflow/: index.html
normalize/: index.html
pipeline/: index.html
scripts/: just_normalize.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  search.html
site/configuration/: index.html
site/filter/: index.html
site/normalize/: index.html
site/pipeline/: index.html
site/search/: search_index.json
site/utils/utils/: index.html
src/fisseq_data_pipeline/: __init__.py  aggregate.py  anova.py  batchcorrect.py  batchvsbatch.py  combat.py  config.py  config.yaml  constants.py  envinit.py  features.py  filter.py  harmonize.py  input.py  medmad.py  normalization.py  normalize.py  ovwt.py  ovwtcellscores.py  permanova.py  pipeline.py  qcfilter.py  utils.py  xgbparams.py
src/fisseq_data_pipeline/config/: __init__.py  app.py  input.py
src/fisseq_data_pipeline/utils/: __init__.py  batches.py  config.py  constants.py  log.py  metadata.py  splits.py  types.py  utils.py  variant.py  vectors.py  xgbparams.py
src/fisseq_data_pipeline/workflows/: PIPELINE_README.md  fisseq_pipeline.nf  init.sh  nextflow.config  run.sh  workflow.nf
stylesheets/: extra.css
tests/: test_aggregate.py  test_cli.py  test_cli_helpers.py  test_cli_smoke.py  test_combat.py  test_config.py  test_features.py  test_filter.py  test_harmonize.py  test_med_mad.py  test_normalization.py  test_normalize.py  test_pipeline.py  test_utils.py
tests/integration/: test_integration.py
tests/unit/: test_aggregate.py  test_anova.py  test_batchcorrect.py  test_batchvsbatch.py  test_features.py  test_input.py  test_normalize.py  test_ovwt.py  test_ovwtcellscores.py  test_permanova.py  test_qcfilter.py  test_splits.py  test_utils.py  test_xgbparams.py
tests/unit/utils/: test_batches.py  test_metadata.py  test_variant.py  test_vectors.py  test_xgbparams.py
utils/: index.html
utils/config/: index.html
utils/utils/: index.html
walkthrough/: index.html
work/50/1327cb4e1f146a5f38ebbd8b4b604d/: .command.run  models.pkl  (+6 more)
workflows/: fisseq.nf  fisseq_pipeline.nf  ovwt.nf
(+20 files in other folders)
