[project]
name = "fisseq-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "gwenneth.straub@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
]

[project.scripts]
fisseq_normalize = "fisseq_data_pipeline.normalize:main"
fisseq_aggregate = "fisseq_data_pipeline.aggregate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings>=0.30.1",
    "pre-commit>=4.5.1",
    "pytest>=8.4.1",
    "ruff>=0.15.12",
]
