[project]
name = "fisseq-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "gwenneth.straub@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "joblib>=1.5.1",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pycytominer>=1.4.0",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.3",
    "xgboost>=2.0.0",
]

[project.scripts]
fisseq-normalize = "fisseq_data_pipeline.normalize:main"
fisseq-aggregate = "fisseq_data_pipeline.aggregate:main"
fisseq-feature-select = "fisseq_data_pipeline.features:main"
fisseq-ovwt = "fisseq_data_pipeline.ovwt:main"
fisseq-qc-filter = "fisseq_data_pipeline.qcfilter:main"
fisseq-permanova = "fisseq_data_pipeline.permanova:main"
fisseq-ovwt-cell-scores = "fisseq_data_pipeline.ovwtcellscores:main"
fisseq-batch-vs-batch = "fisseq_data_pipeline.batchvsbatch:main"
fisseq-batch-correct-fit = "fisseq_data_pipeline.batchcorrect:fit_main"
fisseq-batch-correct-transform = "fisseq_data_pipeline.batchcorrect:transform_main"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings>=0.30.1",
    "pre-commit>=4.5.1",
    "pytest>=8.4.1",
    "ruff>=0.15.12",
]
